# cairo-annotate

./: CMakeLists.txt  CMakePresets.json  ReadMe.md  vcpkg.json
lib/: CMakeLists.txt  annotater.cpp
lib/include/annotater/: annotater.h
tests/: CMakeLists.txt  test.cpp
tools/: CMakeLists.txt  annotate.cpp
